[package]
name = "multisig"
version = "1.0.4"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Multisig self-describing multicodec implementation for digital signatures"
repository = "https://github.com/cryptidtech/multisig.git"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["serde"]

[dependencies]
blsful = { version = "2.5" }
elliptic-curve = "0.13"
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
], optional = true }
ssh-encoding = { version = "0.2" }
thiserror = "1.0"
unsigned-varint = { version = "0.8", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ssh-key = { version = "0.6", default-features = false, features = [
  "alloc",
  "ecdsa",
  "ed25519",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ssh-key = { version = "0.6", features = ["crypto"] }

[dev-dependencies]
hex = "0.4"
serde_test = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
